web/src/components/device-card/device-card/device-card.css
.device-info-card-container {
  border: 1px solid #d0d7de;
  height: 170px;
  width: 310px;
  display: flex;
  flex-direction: column;
  margin: auto;
  border-radius: 5px;
  cursor: pointer;
  position: relative;
  /* box-shadow: 0 0 3px rgba(33, 33, 33, 0.2); */
}

.device-info-card-container:hover {
  transform: scale(1.1);
}

/* Disabled mode */

.device-info-card-container.disabled {
  background-color: #f6f2f2;
  box-shadow: unset;
}

.device-info-card-container.disabled:hover {
  box-shadow: unset;
  transform: unset;
}

/* If the device is busy*/
.device-info-card-container.busy {
  border: 1px solid rgb(238, 137, 137);
  border-left: 5px solid rgb(238, 137, 137);
}

/* device card title */
.device-info-card-container__title_wrapper,
.device-info-card-container__footer_wrapper {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  padding: 10px;
}

.device-info-card-container__device-icon {
  height: 16px;
  width: 16px;
  margin-right: 10px;
}

.device-info-card-container__device-icon.ios {
  height: 20px;
  width: 20px;
  margin-right: 10px;
}

.device-info-card-container__device-title {
  font-size: 14px;
  font-weight: bold;
  color: #195ead;
  word-break: break-all;
  max-width: 200px;
  margin-right: auto;
}

.device-state {
  font-size: 9px;
  text-transform: uppercase;
  color: #939aa3;
  font-weight: 600;
}

.device-state::before {
  content: '';
  display: inline-block;
  font-size: 10px;
  height: 8px;
  width: 8px;
  border-radius: 50%;
  margin-right: 3px;
}

.device-state.ready::before {
  background: green;
}

.device-state.busy::before {
  background: red;
}

.device-state.offline::before {
  background: grey;
}

/* body */
.device-info-card-container__body {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 5px;
}

.device-info-card-container__body_row {
  margin-left: 8px;
  margin-top: 5px;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.device-info-card-container__body_row_label {
  font-size: 12px;
  color: #57606a;
  min-width: 100px;
  font-weight: 500;
}
.device-info-card-container__body_row_value {
  font-size: 12px;
  font-weight: 600;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 190px;
  color: rgb(61, 59, 59);
}

.device-info-card__body_block-device,
.device-info-card__body_unblock-device {
  position: absolute;
  bottom: 20px;
  right: 10px;
  z-index: 10;
  cursor: pointer;
  border-radius: 3px;
}

.device-info-card__body_unblock-device {
  background: rgb(213, 238, 213);
  border: 1px solid rgb(123, 207, 123);
}
.device-info-card__body_block-device {
  background: rgb(238, 213, 213);
  border: 1px solid rgb(207, 123, 123);
}

/* footer */
.device-info-card-container__footer_wrapper {
  padding-top: 15px;
}

.dashboard-link-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-right: 10px;
}

.footer-icon {
  height: 15px;
  width: 15px;
  margin-right: 5px;
}

.footer-deeplink {
  font-size: 12px;
  color: #195ead;
  font-weight: 600;
  cursor: pointer;
  text-decoration: underline;
}

.footer-label {
  font-size: 12px;
  color: #57606a;
  font-weight: 600;
}

